--- a/kadai_014/style.css
+++ b/kadai_014/style.css
@@ -1,11 +1,18 @@
+html{
+  font-size: 20px
+}
+
+.google-fonts {
+  font-family: "Josefin Sans", sans-serif;
+}
+
 body {
   font-family: "Arial", "Meiryo", sans-serif;
-  font-size: 20px;
   text-align: center;
 }
 h1 {
   font-family: "Josefin Sans", sans-serif;
-  font-size: 40px;
+  font-size: 2rem;
   text-align: center;
   letter-spacing: 1.2em;
   text-shadow: 3px 3px 4px gray;
